--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Popup</title>
+    <title>Laravel</title>
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <h1>Bem-vindo à Minha Extensão</h1>
-    <button class="extension-button">Clique-me</button>
+    <div id="app"></div>
     <script src="js/content.js"></script>
 </body>
 </html>
